<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/detail_student_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/detail_student_name"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detail_student_image"
        android:src="@drawable/avatar" />
    <TextView
        android:id="@+id/detail_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chan Ei hMwe"
        android:textSize="25sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/detail_student_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        />
    <TextView
        android:id="@+id/detail_student_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Batch 1"
        android:textSize="23sp"
        app:layout_constraintBaseline_toBaselineOf="@id/detail_student_name"
        app:layout_constraintLeft_toRightOf="@id/detail_student_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>
    <CheckBox
        android:id="@+id/assignment_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/detail_student_batch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <CheckBox
        android:id="@+id/assignment_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_two"
        app:layout_constraintTop_toBottomOf="@id/assignment_one"
        app:layout_constraintLeft_toLeftOf="@id/assignment_one"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_three"
        app:layout_constraintTop_toBottomOf="@id/assignment_two"
        app:layout_constraintLeft_toLeftOf="@id/assignment_one"/>

</androidx.constraintlayout.widget.ConstraintLayout>